fixes caption bar so not covered by image

--- a/themes/snap_bootstrap/sass/_snap_nivo_slider.scss
+++ b/themes/snap_bootstrap/sass/_snap_nivo_slider.scss
@@ -8,17 +8,17 @@
  */
  
 /* overrides for the Nivo Slider dark theme */
+
 #block-nivo-slider-nivo-slider h2.block-title {
-    font-size: 2.5em;
+    font-size: 2.1em;
     color: $snapGreen;
     text-align: center;
     margin: 1em 0 .15em 0;
 }
     .nivo-caption p {
-        padding: 0;
+        padding: 1em;
         font-size: 1em;
         font-family: $lato;
-        margin: -1em 0 0 0;
         }
 
 
